[package]
name = "Vulkan"
version = "0.1.0"
authors = ["Lucas Oulieu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.32.3"
vulkano-shaders = "0.32.0"
vulkano-win = "0.32.0"
winit = "0.27.3"
rand = "0.8.5"
bytemuck = "1.14.0"